--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stopwatch</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
+</head>
   <body>
-    <h1>Welcome to my Stopwatch</h1>
+    <header>
+        <h1 class="text-center my-4">Welcome to my Stopwatch</h1>
+    </header>
+    <main>
+        <!-- input field  -->
+        <section class="text-center">
+            <h3 id="stopwatch">0</h3>
+        </section>
+        <!-- buttons -->
+        <section class="my-4 text-center">
+            <button type="button" id="start-stopwatch" class="btn btn-secondary" onclick="startStopwatch()">Start</button>
+            <button type="button" id="stop-stopwatch" class="btn btn-danger" onclick="stopStopwatch()">Stop</button>
+            <button type="button" id="reset-stopwatch" class="btn btn-warning" onclick="resetStopwatch()">Reset</button>
+        </section>
+    </main>
     <script src="js.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
