--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stopwatch</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
-</head>
+    <style>
+      .btn2{
+        width: 50px;
+      }
+    </style>
+  </head>
   <body>
     <header>
         <h1 class="text-center my-4">Welcome to my Stopwatch</h1>
@@ -13,11 +18,16 @@
     <main>
         <!-- input field  -->
         <section class="text-center">
-            <h3 id="stopwatch">0</h3>
+            <h1> 
+                <span id="stopwatch-hours" class="btn btn2 btn-secondary">00</span> <button class="btn btn-secondary">H</button> 
+                <span id="stopwatch-min" class="btn btn2 btn-secondary">00</span> <button class="btn btn-secondary">M</button> 
+                <span id="stopwatch-second" class="btn btn2 btn-secondary">00</span> <button class="btn btn-secondary">S</button>  
+                <span id="stopwatch-milisecond" class="btn btn2 btn-secondary">00</span> 
+            </h1>
         </section>
         <!-- buttons -->
         <section class="my-4 text-center">
-            <button type="button" id="start-stopwatch" class="btn btn-secondary" onclick="startStopwatch()">Start</button>
+            <button type="button" id="start-stopwatch" class="btn btn-success" onclick="startStopwatch()">Start</button>
             <button type="button" id="stop-stopwatch" class="btn btn-danger" onclick="stopStopwatch()">Stop</button>
             <button type="button" id="reset-stopwatch" class="btn btn-warning" onclick="resetStopwatch()">Reset</button>
         </section>
